--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <script type="text/javascript" 
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoq4_-BeKtYRIs-3FjJL721G1eP5DaU0g&libraries=places"></script>
 <script type="text/javascript" src="/bundle.js"></script></body>
 </html>
